2014-05-24    <aheit@MINION>

	* all: replaced asctomat binary by cantomat
	* libcandbc: bugfix of dbcWriter output (thanks, Johannes)
	* libcanvsb: added decoder for NEOVI binary files (vsb)

2014-03-15    <aheit@MINION>

	* libcandbc: ignore comment lines starting with // (patch for Joe)

2014-02-09    <aheit@MINION>

	* all: released version 0.10
	* libcanmdf: bug fix: failure to open mdf file is not reported

2014-01-25    <aheit@MINIO N>

	* libcanmdf: bug fixes for big endian signals

2014-01-12    <aheit@MINION>

	* libcanmdf: support of big endian integer signals in MDF
	* mdftomat: transformation of signal names to valid MATLAB names

2013-12-26   <aheit@MALFOY>

	* asctomat: fixed Mat_VarWrite() data type to support 64 bit
	* libcanmdf: fixed data types to support 64 bit
	* libcanmdf: improved const qualification
	* mdftomat: conversion of CCP/XCP variables
	* mdftomat: new options for MAT compression and file version
	* mdftomat: handling of empty signals
	* mdftomat: autoconf checks for zlib and HDF5 (thanks, Sebastian)
	* mdftomat: corrected handling of long signal and message names

2013-12-15    <aheit@MALFOY>

        * all: released version 0.9
        * all: updated matio to version 1.5.2

2013-04-21    <aheit@MALFOY>

        * all: updated automake to version 1.13
        * mdftomat, libcanmdf: corrected compilation errors on linux
	  (thanks, John)

2012-12-23    <aheit@MALFOY>

        * all: released version 0.8

2012-12-13    <aheit@MALFOY>

        * all: updated matio to version 1.5.0
        * all: updated autoconf toolchain
        * libcanmdf: new library for parsing MDF files
        * mdftomat: tool for MDF to MAT conversion

2012-04-29    <aheit@MALFOY>

        * libcandbc: allowed NAN as max value in signal specification

2012-04-28    <aheit@MALFOY>

        * libcandbc: allowed underscore as last character in identifier to
        enable parsing of multiplexor signals (thanks, Daniel!). Going