@@ -1,12 +1,10 @@
 /*  mdfsg.c --  access MDF signal groups
-    Copyright (C) 2012, 2013 Andreas Heitmann
+    Copyright (C) 2012-2014 Andreas Heitmann
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
-
-
 
     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
@@ -30,13 +28,13 @@
 /* convert signal to double value */
 double
 mdf_signal_convert(const uint8_t *const data_int_ptr,
-		   const mdf_t *const mdf,
-		   const cn_block_t *const cn_block)
+                   const mdf_t *const mdf,
+                   const cn_block_t *const cn_block)
 {
   /* decode */
   uint8_t bit_offset = cn_block->first_bit%8; /* LSB */
   cc_block_t *cc_block = cc_block_get(mdf,
-				      cn_block->link_conversion_formula);
+                                      cn_block->link_conversion_formula);
   double converted_double;
   int64_t data_int64;
   double data_ieee754;
@@ -49,7 +47,7 @@ mdf_signal_convert(const uint8_t *const data_int_ptr,
     || (sdt == sdt_ieee754_float_big_endian)
     || (sdt == sdt_ieee754_double_big_endian)
     || (default_byte_order_big_endian &&
-	(   (sdt == sdt_unsigned_int_default)
+        (   (sdt == sdt_unsigned_int_default)
          || (sdt == sdt_signed_int_default)
          || (sdt == sdt_ieee754_float_default)
          || (sdt == sdt_ieee754_double_default)));
@@ -69,53 +67,53 @@ mdf_signal_convert(const uint8_t *const data_int_ptr,
       data_int64 = ((*(uint8_t *)data_int_ptr) >> bit_offset) & 1;
     } else if(number_bits <= 9) {
       data_int64 = ((*(uint16_t *)data_int_ptr) >> bit_offset)
-	& ((1u<<number_bits)-1u);
+        & ((1u<<number_bits)-1u);
       if(number_bits>8) {
-	if(swap) {
-	  /*
-	  printf("UI %04x (%d,%d,%d,%d,%d)\t",*(uint16_t *)data_int_ptr,
-		 number_bits, bit_offset, sdt, cn_is_big_endian, swap);
-	  */
-	  data_int64 = bswap_16(*(uint16_t *)&data_int64);
-	  /*
-	  printf("-> %016llx\n", data_int64);
-	  */
-	}
+        if(swap) {
+          /*
+          printf("UI %04x (%d,%d,%d,%d,%d)\t",*(uint16_t *)data_int_ptr,
+                 number_bits, bit_offset, sdt, cn_is_big_endian, swap);
+          */
+          data_int64 = bswap_16(*(uint16_t *)&data_int64);
+          /*
+          printf("-> %016llx\n", data_int64);
+          */
+        }
       }
     } else if(number_bits <= 25) {
       data_int64 = ((*(uint32_t *)data_int_ptr) >> bit_offset)
-	& ((1u<<number_bits)-1u);
+        & ((1u<<number_bits)-1u);
       if(swap) {
-	/*
-	printf("UI %08x (%d,%d,%d,%d,%d)\t",*(uint32_t *)data_int_ptr,
-	       number_bits, bit_offset, sdt, cn_is_big_endian, swap);
-	*/
-	if(number_bits > 16) {
-	  data_int64 = bswap_32(*(uint32_t *)&data_int64);
-	} else {
-	  data_int64 = bswap_16(*(uint16_t *)&data_int64);
-	}
-	/*
-	printf("-> %016llx\n", data_int64);
-	*/
+        /*
+        printf("UI %08x (%d,%d,%d,%d,%d)\t",*(uint32_t *)data_int_ptr,
+               number_bits, bit_offset, sdt, cn_is_big_endian, swap);
+        */
+        if(number_bits > 16) {
+          data_int64 = bswap_32(*(uint32_t *)&data_int64);
+        } else {
+          data_int64 = bswap_16(*(uint16_t *)&data_int64);
+        }
+        /*
+        printf("-> %016llx\n", data_int64);
+        */
       }
     } else {
       assert(bit_offset + number_bits <= 64);
       data_int64 = ((*(uint64_t *)data_int_ptr) >> bit_offset)
-	& (((uint64_t)1<<number_bits)-(uint64_t)1);
+        & (((uint64_t)1<<number_bits)-(uint64_t)1);
       if(swap) {
-	/*
-	printf("UI %16llx (%d,%d,%d,%d,%d)\t",*(uint64_t *)data_int_ptr,
-	       number_bits, bit_offset, sdt, cn_is_big_endian, swap);
-	*/
-	if(number_bits>32) {
-	  data_int64 = bswap_64(*(uint64_t *)&data_int64);
-	} else {
-	  data_int64 = bswap_32(*(uint32_t *)&data_int64);
-	}
-	/*
-	printf("-> %016llx\n", data_int64);
-	*/
+        /*
+        printf("UI %16llx (%d,%d,%d,%d,%d)\t",*(uint64_t *)data_int_ptr,
+               number_bits, bit_offset, sdt, cn_is_big_endian, swap);
+        */
+        if(number_bits>32) {
+          data_int64 = bswap_64(*(uint64_t *)&data_int64);
+        } else {
+          data_int64 = bswap_32(*(uint32_t *)&data_int64);
+        }
+        /*
+        printf("-> %016llx\n", data_int64);
+        */
       } 
     }
     break;
@@ -124,42 +122,49 @@ mdf_signal_convert(const uint8_t *const data_int_ptr,
   case sdt_signed_int_little_endian:
     if(number_bits <= 9) {
       data_int64  =
-	  (int64_t)(((int16_t)
-		     ((*(uint16_t *)data_int_ptr)
-		      << (16-number_bits-bit_offset)))
-		    >>(16-number_bits));
+          (int64_t)(((int16_t)
+                     ((*(uint16_t *)data_int_ptr)
+                      << (16-number_bits-bit_offset)))
+                    >>(16-number_bits));
       if(number_bits>8) {
-	if(swap) {
-	  data_int64 = bswap_16(*(uint16_t *)&data_int64);
-	} else {
-	}
+        if(swap) {
+          data_int64 = bswap_16(*(uint16_t *)&data_int64);
+        } else {
+        }
       }
     } else if(number_bits <= 25) {
       uint32_t data_u32;
 
       data_u32 = ((*(uint32_t *)data_int_ptr) << (32-number_bits-bit_offset));
       if(swap) {
-	if(number_bits > 16) {
-	  data_u32 = bswap_32(*(uint32_t *)&data_u32);
-	} else {
-	  data_u32 = bswap_16(*(uint16_t *)&data_u32);
-	}
+        if(number_bits > 16) {
+          data_u32 = bswap_32(*(uint32_t *)&data_u32);
+        } else {
+          data_u32 = bswap_16(*(uint16_t *)&data_u32);
+        }
       }
       data_int64 = (int64_t)(((int32_t)data_u32) >> (32-number_bits));
       /*
-	printf("SI16 %08lx %d %d %d %d -> %016llx\n",*(uint32_t *)data_int_ptr,
-	       number_bits, bit_offset, cn_is_big_endian, swap, data_int64);
+        printf("SI16 %08lx %d %d %d %d -> %016llx\n",*(uint32_t *)data_int_ptr,
+               number_bits, bit_offset, cn_is_big_endian, swap, data_int64);
       */
     } else {
       uint64_t data_u64;
 
       assert(bit_offset + number_bits <= 64);
       data_u64 = ((*(uint64_t *)data_int_ptr)
-		  << (64-number_bits-bit_offset));
+                  << (64-number_bits-bit_offset));
       if(swap) {
-	data_u64 = bswap_64(*(uint64_t *)&data_u64);
+        if(number_bits>32) {
+          data_u64 = bswap_64(*(uint64_t *)&data_u64);
+          data_int64 = (int64_t)(((int64_t)data_u64) >> (64-number_bits));
+        } else {
+          data_u64 = bswap_32(*(((uint32_t *)&data_u64)+1));
+          data_int64 = (int64_t)(((int32_t)data_u64) >> (32-number_bits));
+        }
+      } else {
+        data_int64 = (int64_t)(((int64_t)data_u64) >> (64-number_bits));
       }
-      data_int64 = (int64_t)(((int64_t)data_u64) >> (64-number_bits));
     }
     break;
   case sdt_ieee754_float_default:
@@ -168,11 +173,11 @@ mdf_signal_convert(const uint8_t *const data_int_ptr,
     {
       uint32_t data_u32 = *(uint32_t *)data_int_ptr;
       if(swap) {
-	 data_u32 = bswap_32(*(uint32_t *)&data_u32);
+         data_u32 = bswap_32(*(uint32_t *)&data_u32);
       }
       data_ieee754 = *(float *)&data_u32;
       /*
-	printf("FLOAT (%d) 0x%x %d 0x%x %g\n", sdt, *(uint32_t *)data_int_ptr, swap, data_u32,  data_ieee754);
+        printf("FLOAT (%d) 0x%x %d 0x%x %g\n", sdt, *(uint32_t *)data_int_ptr, swap, data_u32,  data_ieee754);
       */
     }
     break;
@@ -182,7 +187,7 @@ mdf_signal_convert(const uint8_t *const data_int_ptr,
     {
       uint64_t data_u64 = *(uint64_t *)data_int_ptr;
       if(swap) {
-	 data_u64 = bswap_64(*(uint64_t *)&data_u64);
+         data_u64 = bswap_64(*(uint64_t *)&data_u64);
       }
       data_ieee754 = *(double *)&data_u64;
       /* 
@@ -195,7 +200,7 @@ mdf_signal_convert(const uint8_t *const data_int_ptr,
     break;
   default:
     fprintf(stderr,"signal_data_type %hu not implemented\n",
-	    (unsigned short)sdt);
+            (unsigned short)sdt);
     exit(EXIT_FAILURE);
   }
 
@@ -209,21 +214,21 @@ mdf_signal_convert(const uint8_t *const data_int_ptr,
       case sdt_string:
       case sdt_unsigned_int_big_endian:
       case sdt_signed_int_big_endian:
-	converted_double = data_int64 * cc_block->supplement.linear.p2
-	  +cc_block->supplement.linear.p1;
-	/* printf("%ld -> %lg\n",data_int64,converted_double); */
-	break;
+        converted_double = data_int64 * cc_block->supplement.linear.p2
+          +cc_block->supplement.linear.p1;
+        /* printf("%ld -> %lg\n",data_int64,converted_double); */
+        break;
       case sdt_ieee754_float_default:
       case sdt_ieee754_float_big_endian:
       case sdt_ieee754_float_little_endian:
       case sdt_ieee754_double_default:
       case sdt_ieee754_double_big_endian:
       case sdt_ieee754_double_little_endian:
-	converted_double = data_ieee754 * cc_block->supplement.linear.p2
-	                 + cc_block->supplement.linear.p1;
-	break;
+        converted_double = data_ieee754 * cc_block->supplement.linear.p2
+                         + cc_block->supplement.linear.p1;
+        break;
       default:
-	assert(1);
+        assert(1);
       }
       break;
     case 12:
@@ -232,7 +237,7 @@ mdf_signal_convert(const uint8_t *const data_int_ptr,
     default:
       converted_double = 0.0;
       fprintf(stderr,"conversion %hu not implemented\n",
-	      (unsigned short)cc_block->conversion_type);
+              (unsigned short)cc_block->conversion_type);
       exit(EXIT_FAILURE);
     }
   } else {
